--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
   <h1>Computer Science Department</h1>
+  <h2>Hello World</h2>
+  <button>I'm in</button>
   <p>Government Degree College No.2, Bannu City</p>
   <p>Created by Hamza Khan (BSCS 1st)</p>
 </body>
