--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <body>
   <h1>Computer Science Department</h1>
   <h2>Hello World</h2>
-  <button>I'm in</button>
+  <button>click me</button></button>
   <p>Government Degree College No.2, Bannu City</p>
   <p>Created by Hamza Khan (BSCS 1st)</p>
 </body>
