--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Computer Science Department</title>
+  <meta charset="UTF-8">
+  <title>Web Technology Test</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
   <h1>Computer Science Department</h1>
-  <h2>Hello World</h2>
-  <button>click me</button></button>
-  <p>Government Degree College No.2, Bannu City</p>
-  <p>Created by Hamza Khan (BSCS 1st)</p>
+  <p>Government Degree College No.2, Bannu</p>
+
+  <button onclick="showMessage()">Click Me</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
